Add more testcases for llm model

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,11 @@ dotenv~=0.9
 requests~=2.32.3
 ollama~=0.4.8
 python-dotenv~=1.1.0
-rich~=14.0.0
+rich~=13.9.4
 selenium~=4.32.0
+redlines~=0.5.1
+panel~=1.6.3
+redis~=6.0.0
+sqlalchemy~=2.0.40
+uvicorn~=0.34.2
+fastapi~=0.115.12
