--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,7 @@ sqlalchemy~=2.0.40
 uvicorn~=0.34.2
 fastapi~=0.115.12
 langchain~=0.3.25
-langchain-ollama~=0.3.3
+langchain-community~=0.3.24
+pandas~=2.2.3
+langchain-core~=0.3.60
+tenacity~=8.5.0
